@@ -67,9 +67,9 @@ The minimum software required to configure and build dpkg from a tarball is:
 To enable optional functionality or programs, this software might be needed:
 
   libmd (used by libdpkg, currently falling back to embedded code)
-  zlib (used instead of gzip command-line tool)
-  xz's liblzma (used instead of xz command-line tool)
-  libbzip2 (used instead of bzip2 command-line tool)
+  libz (from zlib, used instead of gzip command-line tool)
+  liblzma (from xz utils, used instead of xz command-line tool)
+  libbz2 (from bzip2, used instead of bzip2 command-line tool)
   libselinux
   curses compatible library (needed on --enable-dselect)
 
