@@ -24,51 +24,51 @@ AC_DEFUN([DPKG_LIB_MD], [
   AM_CONDITIONAL([HAVE_LIBMD_MD5], [test "x$ac_cv_lib_md_MD5Init" = "xyes"])
 ])# DPKG_LIB_MD
 
-# DPKG_WITH_COMPRESS_LIB(NAME, HEADER, FUNC, LINK)
+# DPKG_WITH_COMPRESS_LIB(NAME, HEADER, FUNC)
 # -------------------------------------------------
 # Check for availability of a compression library.
 AC_DEFUN([DPKG_WITH_COMPRESS_LIB], [
   AC_ARG_VAR(AS_TR_CPP($1)[_LIBS], [linker flags for $1 library])
-  AC_ARG_WITH($1,
-    AS_HELP_STRING([--with-$1],
+  AC_ARG_WITH([lib]$1,
+    AS_HELP_STRING([--with-lib$1],
                    [use $1 library for compression and decompression]))
-  if test "x$with_$1" != "xno"; then
-    AC_CHECK_LIB([$4], [$3], [
-      AC_DEFINE([WITH_]AS_TR_CPP($1), 1,
-                [Define to 1 to use $1 rather than console tool])
-      if test "x$with_$1" = "xstatic"; then
-        dpkg_$1_libs="-Wl,-Bstatic -l$4 -Wl,-Bdynamic"
+  if test "x$with_lib$1" != "xno"; then
+    AC_CHECK_LIB([$1], [$3], [
+      AC_DEFINE([WITH_LIB]AS_TR_CPP($1), 1,
+                [Define to 1 to use $1 library rather than console tool])
+      if test "x$with_lib$1" = "xstatic"; then
+        dpkg_$1_libs="-Wl,-Bstatic -l$1 -Wl,-Bdynamic"
       else
-        dpkg_$1_libs="-l$4"
+        dpkg_$1_libs="-l$1"
       fi
       AS_TR_CPP($1)_LIBS="${AS_TR_CPP($1)_LIBS:+$AS_TR_CPP($1)_LIBS }$dpkg_$1_libs"
-      with_$1="yes"
+      with_lib$1="yes"
     ], [
-      if test -n "$with_$1"; then
+      if test -n "$with_lib$1"; then
         AC_MSG_FAILURE([$1 library not found])
       fi
     ])
 
     AC_CHECK_HEADER([$2], [], [
-      if test -n "$with_$1"; then
-        AC_MSG_FAILURE([$1 header not found])
+      if test -n "$with_lib$1"; then
+        AC_MSG_FAILURE([lib$1 header not found])
       fi
     ])
   fi
 ])# DPKG_WITH_COMPRESS_LIB
 
-# DPKG_LIB_ZLIB
+# DPKG_LIB_Z
 # -------------
-# Check for zlib library.
-AC_DEFUN([DPKG_LIB_ZLIB], [
-  DPKG_WITH_COMPRESS_LIB([zlib], [zlib.h], [gzdopen], [z])
-])# DPKG_LIB_ZLIB
+# Check for z library.
+AC_DEFUN([DPKG_LIB_Z], [
+  DPKG_WITH_COMPRESS_LIB([z], [zlib.h], [gzdopen])
+])# DPKG_LIB_Z
 
 # DPKG_LIB_LZMA
 # -------------
 # Check for lzma library.
 AC_DEFUN([DPKG_LIB_LZMA], [
-  DPKG_WITH_COMPRESS_LIB([liblzma], [lzma.h], [lzma_alone_decoder], [lzma])
+  DPKG_WITH_COMPRESS_LIB([lzma], [lzma.h], [lzma_alone_decoder])
   AC_CHECK_LIB([lzma], [lzma_stream_encoder_mt],
                [AC_DEFINE([HAVE_LZMA_MT], [1],
                           [xz multithreaded compression support])])
@@ -78,7 +78,7 @@ AC_DEFUN([DPKG_LIB_LZMA], [
 # ------------
 # Check for bz2 library.
 AC_DEFUN([DPKG_LIB_BZ2], [
-  DPKG_WITH_COMPRESS_LIB([bz2], [bzlib.h], [BZ2_bzdopen], [bz2])
+  DPKG_WITH_COMPRESS_LIB([bz2], [bzlib.h], [BZ2_bzdopen])
 ])# DPKG_LIB_BZ2
 
 # DPKG_LIB_SELINUX
@@ -88,12 +88,12 @@ AC_DEFUN([DPKG_LIB_SELINUX], [
 AC_REQUIRE([PKG_PROG_PKG_CONFIG])
 m4_ifndef([PKG_PROG_PKG_CONFIG], [m4_fatal([missing pkg-config macros])])
 AC_ARG_VAR([SELINUX_LIBS], [linker flags for selinux library])dnl
-AC_ARG_WITH(selinux,
-	AS_HELP_STRING([--with-selinux],
+AC_ARG_WITH(libselinux,
+	AS_HELP_STRING([--with-libselinux],
 		       [use selinux library to set security contexts]))
-if test "x$with_selinux" != "xno"; then
+if test "x$with_libselinux" != "xno"; then
 	AC_CHECK_LIB([selinux], [is_selinux_enabled],
-		[AC_DEFINE(WITH_SELINUX, 1,
+		[AC_DEFINE(WITH_LIBSELINUX, 1,
 			[Define to 1 to compile in SELinux support])
 		PKG_CHECK_EXISTS([libselinux], [
 			if test "x$with_selinux" = "xstatic"; then
@@ -102,15 +102,15 @@ if test "x$with_selinux" != "xno"; then
 				dpkg_selinux_libs=$($PKG_CONFIG --libs libselinux)
 			fi
 		], [
-			if test "x$with_selinux" = "xstatic"; then
+			if test "x$with_libselinux" = "xstatic"; then
 				dpkg_selinux_libs="-Wl,-Bstatic -lselinux -lsepol -Wl,-Bdynamic"
 			else
 				dpkg_selinux_libs="-lselinux"
 			fi
 		])
 		 SELINUX_LIBS="${SELINUX_LIBS:+$SELINUX_LIBS }$dpkg_selinux_libs"
-		 with_selinux="yes"],
-		[if test -n "$with_selinux"; then
+		 with_libselinux="yes"],
+		[if test -n "$with_libselinux"; then
 			AC_MSG_FAILURE([selinux library not found])
 		 fi])
 	AC_CHECK_LIB([selinux], [setexecfilecon],
@@ -119,11 +119,11 @@ if test "x$with_selinux" != "xno"; then
 	])
 
 	AC_CHECK_HEADER([selinux/selinux.h],,
-		[if test -n "$with_selinux"; then
+		[if test -n "$with_libselinux"; then
 			AC_MSG_FAILURE([selinux header not found])
 		 fi])
 fi
-AM_CONDITIONAL(WITH_SELINUX, [test "x$with_selinux" = "xyes"])
+AM_CONDITIONAL(WITH_LIBSELINUX, [test "x$with_libselinux" = "xyes"])
 AM_CONDITIONAL(HAVE_SETEXECFILECON,
                [test "x$ac_cv_lib_selinux_setexecfilecon" = "xyes"])
 ])# DPKG_LIB_SELINUX
