@@ -87,6 +87,8 @@ dpkg (1.18.8) UNRELEASED; urgency=medium
   * Build system:
     - Stop allowing to set deprecated bzip2 compressor as dpkg-deb default.
     - Use libmd automatically if available.
+    - Uniformize library build options, from --with-zlib to --with-libz,
+      --with-bz2 to --with-libbz2 and --with-selinux to --with-libselinux.
   * Test suite:
     - Bump perlcritic ValuesAndExpressions::RequireNumberSeparators minimum
       to 99999.
